Refactor: apply best practices across codebase — fix logging, thread safety, dead code, and duplication
- Replace all string concatenation in logging with parameterized {} across 28 files (50+ instances)
- Fix missing return bug in DelegationHandler causing double response writes
- Extract duplicate delegation enrichment into shared helper method in DelegationServiceImpl (~40 lines saved)
- Fix raw generic types: List<Future> → List<Future<T>> in CreditRequestEnricher and DelegationServiceImpl
- Fix anonymous class anti-pattern in CreditDAOFactory (empty braces on constructor)
- Make UserInfo collection getters return unmodifiable lists (5 getters)
- Fix thread safety in KeycloakClientProvider using double-checked locking with volatile
- Replace e.printStackTrace() with proper LOGGER.error() in KeycloakUserServiceImpl
- Delete 3 entirely commented-out files: QueryDecoder.java, ComputeRoleTest.java, PostgresVerticleTest.java
- Remove ~100 lines of commented-out code in DelegationHandler, UserInfo
- Remove commented import in CreditDAOFactory
- Add DelegatorResolver unit tests (10 tests covering all branches)
- 546 tests passing, zero failures

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>